workloads/must-gather.local.2378005887078000116/quay-io-openshift-release-dev-ocp-v4-0-art-dev-sha256-07d359641e4827bc34e31a5cefaf986acf4e78064fef531124cac0ed6da3e94c/namespaces/openshift/template.openshift.io/templates/s2i-fuse711-spring-boot-2-camel-rest-3scale.yaml
---
apiVersion: template.openshift.io/v1
kind: Template
labels:
  template: s2i-fuse711-spring-boot-2-camel-rest-3scale
metadata:
  annotations:
    description: Spring Boot 2, Camel REST DSL and 3Scale QuickStart. This example
      demonstrates how to use Camel's REST DSL to expose a RESTful API and expose
      it to 3scale.
    iconClass: icon-rh-integration
    openshift.io/display-name: Red Hat Fuse 7.11 Camel REST DSL and 3Scale
    openshift.io/provider-display-name: Red Hat, Inc.
    samples.operator.openshift.io/version: 4.12.0-0.nightly-2023-01-08-142418
    tags: quickstart,java,springboot,fis,jboss-fuse,3scale
    version: "1.11"
  creationTimestamp: "2023-01-09T04:47:53Z"
  labels:
    samples.operator.openshift.io/managed: "true"
  managedFields:
  - apiVersion: template.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:labels:
        .: {}
        f:template: {}
      f:metadata:
        f:annotations:
          .: {}
          f:description: {}
          f:iconClass: {}
          f:openshift.io/display-name: {}
          f:openshift.io/provider-display-name: {}
          f:samples.operator.openshift.io/version: {}
          f:tags: {}
          f:version: {}
        f:labels:
          .: {}
          f:samples.operator.openshift.io/managed: {}
      f:objects: {}
      f:parameters: {}
    manager: cluster-samples-operator
    operation: Update
    time: "2023-01-09T04:47:53Z"
  name: s2i-fuse711-spring-boot-2-camel-rest-3scale
  namespace: openshift
  resourceVersion: "22062"
  uid: 0e81cbc6-5f92-47c2-87e3-ad0a4296eccb
objects:
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      app: ${APP_NAME}
      component: ${APP_NAME}
      group: quickstarts
      provider: s2i
      version: ${APP_VERSION}
    name: ${SERVICE_NAME}-route
  spec:
    to:
      kind: Service
      name: ${SERVICE_NAME}
- apiVersion: v1
  kind: Service
  metadata:
    annotations: {}
    labels:
      app: ${APP_NAME}
      component: ${APP_NAME}
      group: quickstarts
      provider: s2i
      version: ${APP_VERSION}
    name: ${SERVICE_NAME}
  spec:
    clusterIP: None
    deprecatedPublicIPs: []
    ports:
    - port: 9411
      protocol: TCP
      targetPort: 8080
    selector:
      app: ${APP_NAME}
      component: ${APP_NAME}
      group: quickstarts
      provider: s2i
- apiVersion: v1
  kind: ImageStream
  metadata:
    creationTimestamp: null
    labels:
      app: ${APP_NAME}
      component: ${APP_NAME}
      group: quickstarts
      provider: s2i
      version: ${APP_VERSION}
    name: ${APP_NAME}
  spec: {}
  status:
    dockerImageRepository: ""
- apiVersion: v1
  kind: BuildConfig
  metadata:
    creationTimestamp: null
    labels:
      app: ${APP_NAME}
      component: ${APP_NAME}
      group: quickstarts
      provider: s2i
      version: ${APP_VERSION}
    name: ${APP_NAME}
  spec:
    output:
      to:
        kind: ImageStreamTag
        name: ${APP_NAME}:latest
    resources:
      limits:
        memory: ${BUILD_MEMORY_LIMIT}
      requests:
        memory: ${BUILD_MEMORY_REQUEST}
    source:
      git:
        ref: ${GIT_REF}
        uri: ${GIT_REPO}
      type: Git
    strategy:
      sourceStrategy:
        env:
        - name: BUILD_LOGLEVEL
          value: "5"
        - name: ARTIFACT_DIR
          value: ${ARTIFACT_DIR}
        - name: MAVEN_ARGS
          value: ${MAVEN_ARGS}
        - name: MAVEN_ARGS_APPEND
          value: ${MAVEN_ARGS_APPEND}
        - name: MAVEN_MIRROR_URL
          value: ${MAVEN_MIRROR_URL}
        forcePull: true
        from:
          kind: ImageStreamTag
          name: ${BASE_IMAGE_NAME}:${BUILDER_VERSION}
          namespace: ${IMAGE_STREAM_NAMESPACE}
        incremental: true
      type: Source
    triggers:
    - github:
        secret: ${BUILD_SECRET}
      type: GitHub
    - generic:
        secret: ${BUILD_SECRET}
      type: Generic
    - type: ConfigChange
    - imageChange: {}
      type: ImageChange
  status:
    lastVersion: 0
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    creationTimestamp: null
    labels:
      app: ${APP_NAME}
      component: ${APP_NAME}
      group: quickstarts
      provider: s2i
      version: ${APP_VERSION}
    name: ${APP_NAME}
  spec:
    replicas: 1
    selector:
      app: ${APP_NAME}
      component: ${APP_NAME}
      deploymentconfig: ${APP_NAME}
      group: quickstarts
      provider: s2i
      version: ${APP_VERSION}
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: ${APP_NAME}
          com.company: Red_Hat
          component: ${APP_NAME}
          deploymentconfig: ${APP_NAME}
          group: quickstarts
          provider: s2i
          rht.comp: ${APP_NAME}
          rht.comp_ver: ${APP_VERSION}
          rht.prod_name: Red_Hat_Integration
          rht.prod_ver: "7.11"
          version: ${APP_VERSION}
      spec:
        containers:
        - env:
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          image: library/${APP_NAME}:latest
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 180
          name: ${APP_NAME}
          ports:
          - containerPort: 8080
            name: http
          - containerPort: 8778
            name: jolokia
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 10
          resources:
            limits:
              cpu: ${CPU_LIMIT}
              memory: ${MEMORY_LIMIT}
            requests:
              cpu: ${CPU_REQUEST}
              memory: ${MEMORY_REQUEST}
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - ${APP_NAME}
        from:
          kind: ImageStreamTag
          name: ${APP_NAME}:latest
      type: ImageChange
parameters:
- description: The name assigned to the application.
  displayName: Application Name
  name: APP_NAME
  required: true
  value: s2i-fuse711-spring-boot-2-camel-rest-3scale
- description: The URL of the repository with your application source code.
  displayName: Git Repository URL
  name: GIT_REPO
  required: true
  value: https://github.com/fabric8-quickstarts/spring-boot-camel-rest-3scale.git
- description: Set this to a branch name, tag or other ref of your repository if you
    are not using the default branch.
  displayName: Git Reference
  name: GIT_REF
  value: spring-boot-camel-rest-3scale-7.11.0.fuse-sb2-7_11_0-00023-redhat-00001
- description: Exposed service name.
  displayName: Service Name
  name: SERVICE_NAME
  value: camel-rest-3scale
- description: The base image used. Default is fuse7-java-openshift which is JDK8
    based; fuse7-java11-openshift is JDK11 based
  displayName: Base Image Name, JDK11 or JDK8
  name: BASE_IMAGE_NAME
  value: fuse7-java-openshift
- description: The version of the FIS S2I builder image to use.
  displayName: Builder version
  name: BUILDER_VERSION
  value: "1.11"
- description: The application version.
  displayName: Application Version
  name: APP_VERSION
  value: 7.11.0.fuse-sb2-7_11_0-00023-redhat-00001
- description: Arguments passed to mvn in the build.
  displayName: Maven Arguments
  name: MAVEN_ARGS
  value: package -DskipTests -Djkube.skip -e -B
- description: Extra arguments passed to mvn, e.g. for multi-module builds.
  displayName: Extra Maven Arguments
  name: MAVEN_ARGS_APPEND
- description: Maven mirror to use for S2I builds.
  displayName: Maven mirror URL
  name: MAVEN_MIRROR_URL
- description: Directory of the artifact to be built, e.g. for multi-module builds.
  displayName: Maven build directory
  name: ARTIFACT_DIR
- description: Namespace in which the Fuse ImageStreams are installed. These ImageStreams
    are normally installed in the openshift namespace. You should only need to modify
    this if you've installed the ImageStreams in a different namespace/project.
  displayName: Image Stream Namespace
  name: IMAGE_STREAM_NAMESPACE
  required: true
  value: openshift
- description: The secret needed to trigger a build.
  displayName: Git Build Secret
  from: '[a-zA-Z0-9]{40}'
  generate: expression
  name: BUILD_SECRET
- description: The amount of CPU to request.
  displayName: CPU request
  name: CPU_REQUEST
  required: true
  value: "0.2"
- description: The amount of memory required for the container to run.
  displayName: Memory request
  name: MEMORY_REQUEST
  required: true
  value: 256Mi
- description: The amount of CPU the container is limited to use.
  displayName: CPU limit
  name: CPU_LIMIT
  required: true
  value: "1.0"
- description: The amount of memory the container is limited to use.
  displayName: Memory limit
  name: MEMORY_LIMIT
  required: true
  value: 256Mi
- description: The amount of memory to request for builds.
  displayName: Build Memory request
  name: BUILD_MEMORY_REQUEST
  required: true
  value: 0.7G
- description: The amount of memory the build container is limited to use.
  displayName: Build Memory limit
  name: BUILD_MEMORY_LIMIT
  required: true
  value: 1G
